codex-rs/core/tests/suite/snapshots/all__suite__compact_resume_fork__rollback_past_compaction_shapes.snap
---
source: core/tests/suite/compact_resume_fork.rs
assertion_line: 848
expression: "context_snapshot::format_labeled_requests_snapshot(\"rollback past compaction replay after rollback\",\n&[(\"compaction request\", &requests[1]), (\"before rollback\", &requests[2]),\n(\"after rollback\", &requests[3]),], &ContextSnapshotOptions::default(),)"
---
Scenario: rollback past compaction replay after rollback

## Window 1
-- request 1 (compaction; compaction request) --
00:message/developer:
    <permissions instructions>
    Filesystem sandboxing defines which files can be read or written. `sandbox_mode` is `read-only`: The san... permits reading files. Network access is restricted. [hash=be7da4425f89053c]
    # Escalation Requests

    Commands are run outside the sandbox if they are approved by the user, or match an existing rule that al...hell control operators, including but not limited to: [hash=d24ebf5fa4e4b9bb]

    - Pipes: |
    - Logical operators: &&, ||
    <OMITTED 44 LINES; ~790 TOKENS; hash=3a8900343e968d61>
    NEVER provide a prefix_rule if your command uses a heredoc or herestring.

    ### Examples
    Good examples of prefixes:
    - ["npm", "run", "dev"]
    - ["gh", "pr", "check"]
    - ["cargo", "test"]
    </permissions instructions>
01:message/user:
    <environment_context>
      <cwd><CWD></cwd>
      <shell><HOST_SHELL></shell>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
      <filesystem><workspace_roots><root><WORKSPACE_ROOT 1></root></workspace_roots><permission_profile type...ntry></file_system></permission_profile></filesystem> [hash=911722cc43b4c3b8]
    </environment_context>
02:message/user:
    hello world
03:message/assistant:
    FIRST_REPLY
04:message/user:
    You are performing a CONTEXT CHECKPOINT COMPACTION. Create a handoff summary for another LLM that will resume the task.

    Include:
    - Current progress and key decisions made
    - Important context, constraints, or user preferences
    - What remains to be done (clear next steps)
    - Any critical data, examples, or references needed to continue

    Be concise, structured, and focused on helping the next LLM seamlessly continue the work.


## Window 2 (after request 1: input diverged at item 00, settings changed (parallel_tool_calls, tools))
-- request 2 (turn; before rollback) --
00:message/user:
    hello world
01:message/user:
    Another language model started to solve this problem and produced a summary of its thinking process. You...ion in this summary to assist with your own analysis: [hash=b8ce9f267277728e]
    SUMMARY_ONLY_CONTEXT
02:message/developer:
    <permissions instructions>
    Filesystem sandboxing defines which files can be read or written. `sandbox_mode` is `read-only`: The san... permits reading files. Network access is restricted. [hash=be7da4425f89053c]
    # Escalation Requests

    Commands are run outside the sandbox if they are approved by the user, or match an existing rule that al...hell control operators, including but not limited to: [hash=d24ebf5fa4e4b9bb]

    - Pipes: |
    - Logical operators: &&, ||
    <OMITTED 44 LINES; ~790 TOKENS; hash=3a8900343e968d61>
    NEVER provide a prefix_rule if your command uses a heredoc or herestring.

    ### Examples
    Good examples of prefixes:
    - ["npm", "run", "dev"]
    - ["gh", "pr", "check"]
    - ["cargo", "test"]
    </permissions instructions>
03:message/user:
    <environment_context>
      <cwd><CWD></cwd>
      <shell><HOST_SHELL></shell>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
      <filesystem><workspace_roots><root><WORKSPACE_ROOT 1></root></workspace_roots><permission_profile type...ntry></file_system></permission_profile></filesystem> [hash=911722cc43b4c3b8]
    </environment_context>
04:message/user:
    EDITED_AFTER_COMPACT

## Window 3 (after request 2: input diverged at item 04)
-- request 3 (turn; after rollback) --
00:message/user:
    hello world
01:message/user:
    Another language model started to solve this problem and produced a summary of its thinking process. You...ion in this summary to assist with your own analysis: [hash=b8ce9f267277728e]
    SUMMARY_ONLY_CONTEXT
02:message/developer:
    <permissions instructions>
    Filesystem sandboxing defines which files can be read or written. `sandbox_mode` is `read-only`: The san... permits reading files. Network access is restricted. [hash=be7da4425f89053c]
    # Escalation Requests

    Commands are run outside the sandbox if they are approved by the user, or match an existing rule that al...hell control operators, including but not limited to: [hash=d24ebf5fa4e4b9bb]

    - Pipes: |
    - Logical operators: &&, ||
    <OMITTED 44 LINES; ~790 TOKENS; hash=3a8900343e968d61>
    NEVER provide a prefix_rule if your command uses a heredoc or herestring.

    ### Examples
    Good examples of prefixes:
    - ["npm", "run", "dev"]
    - ["gh", "pr", "check"]
    - ["cargo", "test"]
    </permissions instructions>
03:message/user:
    <environment_context>
      <cwd><CWD></cwd>
      <shell><HOST_SHELL></shell>
      <current_date><CURRENT_DATE></current_date>
      <timezone><HOST_TIMEZONE></timezone>
      <filesystem><workspace_roots><root><WORKSPACE_ROOT 1></root></workspace_roots><permission_profile type...ntry></file_system></permission_profile></filesystem> [hash=911722cc43b4c3b8]
    </environment_context>
04:message/user:
    AFTER_ROLLBACK
